...
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:context=".fragments.CollectionsFragment">


            <TextView
                android:id="@+id/tv_addingBeginning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/adding_in_the_beginning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rv_addBegin_linkedList"
                app:layout_constraintTop_toBottomOf="@+id/tv_removing_end"
                app:rv_head="@string/copyOnWrite" />

            <Button
                android:id="@+id/btn_clear_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_margin="16dp"
                android:hint="@string/collection_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_collectionSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_calculate_list"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center|bottom"
                android:layout_margin="16dp"
                android:text="@string/calculate"
                android:textSize="25sp" />
...
